여행등록 수정